added store section and sponsorship page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             background-color: rgba(0, 0, 0, .2);
             box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
         }
+
+        .custom-shadow:hover {
+
+            box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
+        }
     </style>
 </head>
 
@@ -35,21 +40,15 @@
             <nav class="nav navbar is-transparent is-fixed-top">
                 <div class="navbar-brand">
                     <a class="navbar-item" href="#pagetop">
-                        <img src="logo.png" style="border-radius: 5px; ">
+                        <img src="logo.png" style="border-radius: 5px; width: auto; max-height: 40px">
                     </a>
                 </div>
 
                 <div id="supergoodnavbar" class="navbar-menu">
 
-                    <a class="navbar-item" href="https://bulma.io/">
-                        <button class="button is-dark">About</button>
+                    <a class="navbar-item" href="sponsors.html">
+                        <button class="button is-dark">Sponsors</button>
                     </a>
-
-                    <div class="navbar-start">
-                        <a class="navbar-item">
-                            <p><a href="#sponsors" style="color:white">Sponsor</a></p>
-                        </a>
-                    </div>
 
 
                     <div class="navbar-end">
@@ -75,6 +74,8 @@
         </div>
 
     </div>
+
+
     <div class="is-overlay center">
         <div class="center" style="display:block;">
             <p class="title is-1 has-text-light center">
@@ -89,26 +90,34 @@
 
 
 
-    <section class="hero is-light is-fullheight">
+    <section class="hero is-light">
         <div class="hero-body" style="display:block;">
             <p class="title center_horizontal is-4" style="font-weight: 100; padding-top: 15vh">
                 Check out our robotics team!
             </p>
             <p class="title center_horizontal is-1">
-                About Us
+                WE ARE OLYMPUS ROBOTICS
             </p>
 
 
-            <div class="columns is-centered" style="padding-top: 10vh; margin: 4vh;">
-                <div class="column is-one-third">
-                    <p class="title is-5 center_horizontal">
+            <div class="columns is-centered has-text-centered" style="padding-top: 10vh; margin: 4vh;">
+                <div class="column is-one-third" style="padding:5vh">
+                    <p class="title is-5">
                         <strong>Our Team</strong>
                     </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
+                    <p class="is-size-5">
+                        Olympus Robotics is a vibrant and dedicated group of students, mentors,
+                        and volunteers who are driven by a passion for engineering and technology.
+                        Based in Fort Wayne, Indiana, we are a FRC team that is committed to using our
+                        skills and knowledge to make a positive impact in our community and beyond.
 
-                    <a href="www.google.com" style="">Learn More</a>
+                        We have had the opportunity to learn and grow through the FRC, using the principles of science,
+                        technology, engineering, and math to build and program robots that are capable of tackling
+                        complex challenges. But our involvement in the FRC goes beyond just building robots - we are
+                        also dedicated to giving back to the community through outreach and service projects.
+
+
+                    </p>
                 </div>
 
                 <div class="column is-two-thirds">
@@ -121,11 +130,59 @@
 
 
 
+    <section class="hero is-light">
+        <div class="hero-body center">
+            <div class="container">
+                <a class="center_horizontal" href="https://form.jotform.com/223425061392147" target="_blank">
+                    <h1 class="title is-1 is-uppercase">Visit our store</h1>
+                </a>
+                <div class="columns is-flex align-items-stretch " style="padding-top: 10vh;">
+
+                    <div class="column ">
+                        <a href="https://form.jotform.com/223425061392147">
+                            <div class="box custom-shadow" style="height: 300px">
+                                <img src="store1.PNG" style="max-height: 250px; width: auto;">
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="column">
+                        <a href="https://form.jotform.com/223425061392147">
+                            <div class="box custom-shadow" style="height: 300px">
+                                <img src="store2.PNG">
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="column">
+                        <a href="https://form.jotform.com/223425061392147">
+                            <div class="box custom-shadow" style="height: 300px">
+                                <img src="store4.PNG">
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="column">
+                        <a href="https://form.jotform.com/223425061392147">
+                            <div class="box custom-shadow" style="height: 300px">
+                                <img src="store5.PNG">
+                            </div>
+                        </a>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
                 <strong>Olympus Robotics</strong>
-                Copyright: yes.
+                <br> Copyright: yes.
             </p>
         </div>
     </footer>
