added sponsor button

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </a>
 
                     <a class="navbar-item" href="sponsors.html">
-                        Support Us
+                        Sponsorship
                     </a>
 
                     <div class="navbar-end">
@@ -109,7 +109,7 @@
             </p>
 
 
-            <div class="columns is-centered has-text-centered" style="padding-top: 10vh; margin: 4vh;">
+            <div class="columns is-centered has-text-centered" style="padding-top: 10vh; margin: 2vh;">
                 <div class="column is-one-third" style="padding:5vh">
                     <p class="title is-5">
                         <strong>Our Team</strong>
@@ -122,9 +122,12 @@
                         We have had the opportunity to learn and grow through FRC, using the principles of engineering to build and program robots that are capable of tackling
                         complex challenges. But our involvement in the FRC goes beyond just building robots - we are
                         also dedicated to giving back to the community through outreach and service projects.
-
-
+                        
                     </p>
+                    <div style="padding-top: 5vh">
+                        <a class="is-link button is-size-5" href="/sponsors.html" >Support Us</a>
+                    </div>
+                    
                 </div>
 
                 <div class="column is-two-thirds">
