--- a/sponsors.html
+++ b/sponsors.html
@@ -51,7 +51,7 @@
                     </a>
 
                     <a class="navbar-item" href="sponsors.html">
-                        Support Us
+                        Sponsorship
                     </a>
 
                     <div class="navbar-end">
