made it an SPA because its cool

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             font-size: 17px;
         }
     </style>
+    <script type="module" src="index.js"></script>
 </head>
 
 <body>
@@ -164,7 +165,7 @@
                     <div class="column">
                         <a href="https://form.jotform.com/223425061392147">
                             <div class="box custom-shadow" style="height: 300px">
-                                <img src="images/store1.PNG" style="max-height: 250px; width: auto;">
+                                <img src="images/store1.png" style="max-height: 250px; width: auto;">
                             </div>
                         </a>
                     </div>
@@ -172,7 +173,7 @@
                     <div class="column">
                         <a href="https://form.jotform.com/223425061392147">
                             <div class="box custom-shadow" style="height: 300px">
-                                <img src="images/store2.PNG">
+                                <img src="images/store2.png">
                             </div>
                         </a>
                     </div>
@@ -180,7 +181,7 @@
                     <div class="column">
                         <a href="https://form.jotform.com/223425061392147">
                             <div class="box custom-shadow" style="height: 300px">
-                                <img src="images/store4.PNG">
+                                <img src="images/store4.png">
                             </div>
                         </a>
                     </div>
@@ -188,7 +189,7 @@
                     <div class="column">
                         <a href="https://form.jotform.com/223425061392147">
                             <div class="box custom-shadow" style="height: 300px">
-                                <img src="images/store5.PNG">
+                                <img src="images/store5.png">
                             </div>
                         </a>
                     </div>
