changed burger menu to white for visibility

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
 
                     <a role="button" class="center_horizontal navbar-burger burger nav-toggle" id="burger" onclick="toggleBurger()" style="width:10vh; height:10vh">
-                        <span aria-hidden="true"></span>
-                        <span aria-hidden="true"></span>
-                        <span aria-hidden="true"></span>
+                        <span aria-hidden="true" style="color:white"></span>
+                        <span aria-hidden="true" style="color:white"></span>
+                        <span aria-hidden="true" style="color:white"></span>
                     </a>
                 </div>
 
