--- a/sponsors.html
+++ b/sponsors.html
@@ -36,7 +36,6 @@
 <body>
 
 
-
     <div class="card" id="pagetop">
         <div class="is-overlay">
             <nav class="nav navbar is-transparent is-fixed-top">
@@ -46,10 +45,10 @@
                     </a>
 
 
-                    <a role="button" class="navbar-burger burger nav-toggle" id="burger" onclick="toggleBurger()">
-                        <span aria-hidden="true"></span>
-                        <span aria-hidden="true"></span>
-                        <span aria-hidden="true"></span>
+                    <a role="button" class="center_horizontal navbar-burger burger nav-toggle" id="burger" onclick="toggleBurger()" style="width:10vh; height:10vh">
+                        <span aria-hidden="true" style="color:white"></span>
+                        <span aria-hidden="true" style="color:white"></span>
+                        <span aria-hidden="true" style="color:white"></span>
                     </a>
                 </div>
 
