fixed issue with sponsorship packet

--- a/sponsors.html
+++ b/sponsors.html
@@ -109,14 +109,14 @@
                     <div class="column is-one-quarter center">
                         <div class="card custom-shadow">
                             <div class="card-content">
-                                <a href="content/Sponsorship Packet.pdf">
+                                <a data-cold href="content/sponsors.pdf" target="_blank">
                                     <img src="images/blue_logo.png">
                                 </a>
                             </div>
                             <footer class="card-footer">
                                 <p class="card-footer-item">
                                     <span>
-                                        <a href="content/Sponsorship Packet.pdf">Sponsorship Packet.pdf</a>
+                                        <a data-cold href="./content/sponsors.pdf" target="_blank" type="application/pdf" rel="alternate">Sponsorship Packet.pdf</a>
                                     </span>
                                 </p>
                             </footer>
