changed the font awesome cdn used to fix instagram icon from disappearing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="icon" type="image/x-icon" href="images/logo.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <!-- <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="main.css">
     <style>
         html {
@@ -37,8 +38,6 @@
 </head>
 
 <body>
-    
-
     <div class="card" id="pagetop">
         <div class="card-image">
             <figure class="image" style="background-color: black; ">
@@ -79,7 +78,8 @@
                         <div class="navbar-item">
                             <div class="field is-grouped">
                                 <p class="control">
-                                    <a class="bd-tw-button button is-link"
+                                    <a data-cold 
+                                        class="bd-tw-button button is-link"
                                         href="https://www.instagram.com/4982_olympus_robotics/">
                                         <span class="icon">
                                             <i class="fab fa-instagram"></i>
