--- a/sponsors.html
+++ b/sponsors.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Olympus Robotics</title>
+    <link rel="icon" type="image/x-icon" href="images/logo.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="main.css">
     <style>
         html {
@@ -23,6 +23,7 @@
         .custom-shadow:hover {
 
             box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
+
         }
 
         .navbar-menu a {
@@ -32,6 +33,7 @@
     </style>
     <script type="module" src="index.js"></script>
 </head>
+
 
 <body>
 
