--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@
                     <a class="navbar-item" href="#pagetop">
                         <img src="images/logo.png" style="border-radius: 5px; max-height: 60px">
                     </a>
-
-
-                    <a role="button" class="center_horizontal navbar-burger burger nav-toggle" id="burger" onclick="toggleBurger()" style="width:10vh; height:10vh">
+                    <a role="button" class="navbar-burger burger nav-toggle" onclick="toggleBurger()" aria-label="menu" aria-expanded="false" style="width:10vh; height:10vh">  
                         <span aria-hidden="true" style="color:white"></span>
                         <span aria-hidden="true" style="color:white"></span>
                         <span aria-hidden="true" style="color:white"></span>
                     </a>
+                    
                 </div>
 
 
