--- a/sponsors.html
+++ b/sponsors.html
@@ -47,7 +47,7 @@
                     </a>
 
 
-                    <a role="button" class="center_horizontal navbar-burger burger nav-toggle" id="burger" onclick="toggleBurger()" style="width:10vh; height:10vh">
+                    <a role="button" class="navbar-burger burger nav-toggle" onclick="toggleBurger()" aria-label="menu" aria-expanded="false" style="width:10vh; height:10vh">  
                         <span aria-hidden="true" style="color:white"></span>
                         <span aria-hidden="true" style="color:white"></span>
                         <span aria-hidden="true" style="color:white"></span>
