--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </p>
 
 
-            <div class="columns is-centered has-text-centered" style="padding-top: 10vh; margin: 2vh;">
+            <div class="columns is-centered has-text-centered" style="padding-top: 0vh; margin: 2vh;">
                 <div class="column is-one-third" style="padding:5vh">
                     <p class="title is-5">
                         <strong>Our Team</strong>
@@ -175,19 +175,18 @@
                 <a class="center_horizontal" href="https://form.jotform.com/223425061392147" target="_blank">
                     <h1 class="title is-1 is-uppercase">Visit our store</h1>
                 </a>
-                <div class="columns is-flex align-items-stretch " style="padding-top: 10vh;">
-
+                <div class="is-flex align-items-stretch is-mobile center" style="padding-top: 10vh; flex-wrap:wrap">
                     <div class="column">
                         <a href="https://form.jotform.com/223425061392147">
-                            <div class="box custom-shadow" style="height: 300px">
-                                <img src="images/store1.png" style="max-height: 250px; width: auto;">
+                            <div class="box custom-shadow center shop">
+                                <img src="images/store1.png">
                             </div>
                         </a>
                     </div>
 
                     <div class="column">
                         <a href="https://form.jotform.com/223425061392147">
-                            <div class="box custom-shadow" style="height: 300px">
+                            <div class="box custom-shadow center shop">
                                 <img src="images/store2.png">
                             </div>
                         </a>
@@ -195,7 +194,7 @@
 
                     <div class="column">
                         <a href="https://form.jotform.com/223425061392147">
-                            <div class="box custom-shadow" style="height: 300px">
+                            <div class="box custom-shadow center shop">
                                 <img src="images/store4.png">
                             </div>
                         </a>
@@ -203,7 +202,7 @@
 
                     <div class="column">
                         <a href="https://form.jotform.com/223425061392147">
-                            <div class="box custom-shadow" style="height: 300px">
+                            <div class="box custom-shadow center shop">
                                 <img src="images/store5.png">
                             </div>
                         </a>
