mobile changes issue #5

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <section class="hero">
         <div class="hero-body" style="display:block;">
-            <p class="title center_horizontal is-4" style="font-weight: 100; padding-top: 15vh">
+            <p class="title center_horizontal is-4" style="font-weight: 100; padding-top: 3vh">
                 Check out our robotics team!
             </p>
             <p class="title center_horizontal is-1">
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="column is-two-thirds">
-                    <img class="center" src="images/team.jfif" style="border-radius: 20px;">
+                    <img class="center teamphoto" src="images/team.jfif"">
                 </div>
 
             </div>
@@ -158,7 +158,7 @@
         <div class="hero-body has-text-centered">
             <img src="https://www.firstinspires.org/sites/all/themes/first/assets/images/2020/first-horz-rgb.png"
                 style="width:60vh">
-            <p class="title center_horizontal is-4" style="font-weight: 100; padding-top: 5vh">
+            <p class="title center_horizontal is-4" style="font-weight: 100;">
                 We participate in the FIRST Robotics Competition. An yearly international high school robotics
                 competition.
             </p>
