--- a/sponsors.html
+++ b/sponsors.html
@@ -92,11 +92,16 @@
 
     </div>
 
-    <section class="hero is-link" style="height: 35vh">
+    <section class="hero is-link">
         <div class="hero-body center">
-            <p class="title is-1 center">
-                Support Us!
-            </p>
+            <div style="margin-top:10vh;">
+                <p class="title is-1 ">
+                    Support Us!
+                </p>
+                <p class="subtitle">
+                    We rely on sponsors to fund all facets of our team
+                </p>
+            </div>
         </div>
     </section>
 
