added github to navbar

--- a/index.html
+++ b/index.html
@@ -90,6 +90,22 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="navbar-item">
+                            <div class="field is-grouped">
+                                <p class="control">
+                                    <a data-cold 
+                                        class="bd-tw-button button is-link"
+                                        href="https://github.com/OlympusRobotics">
+                                        <span class="icon">
+                                            <i class="fab fa-github"></i>
+                                        </span>
+                                        <span>
+                                            Github
+                                        </span>
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </nav>
