fixed bad english

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
             <img src="https://www.firstinspires.org/sites/all/themes/first/assets/images/2020/first-horz-rgb.png"
                 style="width:60vh">
             <p class="title center_horizontal is-4" style="font-weight: 100;">
-                We participate in the FIRST Robotics Competition. An yearly international high school robotics
-                competition.
+                We participate in the FIRST Robotics Competition, a yearly international high school robotics
+                competition which prepares students like us for the STEM field.
             </p>
             <a href="https://www.firstinspires.org/robotics/frc">Learn More</a>
 
