added sponsorship info + fixed navbar

--- a/index.html
+++ b/index.html
@@ -230,12 +230,23 @@
 
 
     <footer class="footer">
-        <div class="content has-text-centered">
+        <div class="content center_horizontal has-text-centered">
+
+            <p>
+                <strong>Contact Us at:  </strong> <a href="mailto:4982captains@gmail.com" target="_blank">4982captains@gmail.com</a>
+            </p>
+            
+        </div>
+
+        <div class="content center_horizontal has-text-centered">
+
             <p>
                 <strong>Olympus Robotics</strong>
                 <br> Copyright 2023
             </p>
+           
         </div>
+
     </footer>
 
     <script type="text/javascript" src="/burger.js"></script>
