--- a/sponsors.html
+++ b/sponsors.html
@@ -85,6 +85,22 @@
                             </div>
                         </div>
                     </div>
+                    <div class="navbar-item">
+                        <div class="field is-grouped">
+                            <p class="control">
+                                <a data-cold 
+                                    class="bd-tw-button button is-link"
+                                    href="https://github.com/OlympusRobotics">
+                                    <span class="icon">
+                                        <i class="fab fa-github"></i>
+                                    </span>
+                                    <span>
+                                        Github
+                                    </span>
+                                </a>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </nav>
 
@@ -130,6 +146,22 @@
                         </div>
                     </div>
 
+                    <div class="column is-one-quarter center">
+                        <div class="card custom-shadow">
+                            <div class="card-content">
+                                <a data-cold href="content/First Semester Report.pdf" target="_blank">
+                                    <img src="images/FirstSem.png" style="border-radius: 2vh;">
+                                </a>
+                            </div>
+                            <footer class="card-footer">
+                                <p class="card-footer-item">
+                                    <span>
+                                        <a data-cold href="./content/First Semester Report.pdf" target="_blank" type="application/pdf" rel="alternate">First Semester Report.pdf</a>
+                                    </span>
+                                </p>
+                            </footer>
+                        </div>
+                    </div>
                 </div>
 
 
@@ -321,13 +353,25 @@
     </div>
 
 
+
     <footer class="footer">
-        <div class="content has-text-centered">
+        <div class="content center_horizontal has-text-centered">
+
+            <p>
+                <strong>Contact Us at:  </strong> <a href="mailto:4982captains@gmail.com" target="_blank">4982captains@gmail.com</a>
+            </p>
+            
+        </div>
+
+        <div class="content center_horizontal has-text-centered">
+
             <p>
                 <strong>Olympus Robotics</strong>
                 <br> Copyright 2023
             </p>
+           
         </div>
+
     </footer>
 
     <script type="text/javascript" src="/burger.js"></script>
