minor tweaks such as centering title on mobile

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
 
 
-    <div class="is-overlay center">
+    <div class="is-overlay has-text-centered center">
         <div class="center" style="display:block;">
             <p class="title is-1 has-text-light center">
                 Olympus Robotics
@@ -130,16 +130,13 @@
 
 
     <section class="hero">
-        <div class="hero-body" style="display:block;">
-            <p class="title center_horizontal is-4" style="font-weight: 100; padding-top: 3vh">
-                Check out our robotics team!
-            </p>
+        <div class="hero-body has-text-centered" style="display:block;">
             <p class="title center_horizontal is-1">
                 WE ARE OLYMPUS ROBOTICS
             </p>
 
 
-            <div class="columns is-centered has-text-centered" style="padding-top: 0vh; margin: 2vh;">
+            <div class="columns is-centered has-text-centered is-vcentered is-desktop" >
                 <div class="column is-one-third" style="padding:5vh">
                     <p class="title is-5">
                         <strong>Our Team</strong>
