--- a/sponsors.html
+++ b/sponsors.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Olympus Robotics</title>
+    <title>Sponsors - Olympus Robotics</title>
     <link rel="icon" type="image/x-icon" href="images/logo.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
