fixed broken sponsor cards

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <div class="field is-grouped">
                                 <p class="control">
                                     <a data-cold 
-                                        class="bd-tw-button button is-link"
+                                        class="bd-tw-button is-dark button"
                                         href="https://github.com/OlympusRobotics">
                                         <span class="icon">
                                             <i class="fab fa-github"></i>
@@ -144,7 +144,7 @@
                     <p class="is-size-5">
                         Olympus Robotics is a dedicated group of students and mentors driven by a passion for
                         engineering and technology.
-                        Based in Fort Wayne, Indiana, we are a FRC team that is committed to using our
+                        Based at Homestead High School in Fort Wayne, Indiana, we are a FRC team that is committed to using our
                         skills and knowledge to make a positive impact in our community and beyond.
 
                         We have had the opportunity to learn and grow through FRC, using the principles of engineering
