--- a/sponsors.html
+++ b/sponsors.html
@@ -73,6 +73,9 @@
                         <a class="navbar-item" href="sponsors.html">
                             Sponsorship
                         </a>
+                        <a class="navbar-item" href="join.html">
+                            Join Us!
+                        </a>
 
 
                     </div>
@@ -92,12 +95,28 @@
                                 </p>
                             </div>
                         </div>
+                                                <div class="navbar-item">
+                            <div class="field is-grouped">
+                                <p class="control">
+                                    <a data-cold 
+                                        class="bd-tw-button button is-danger"
+                                        href="https://www.youtube.com/@olympusrobotics4982">
+                                        <span class="icon">
+                                            <i class="fab fa-youtube"></i>
+                                        </span>
+                                        <span>
+                                           Youtube 
+                                        </span>
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                     <div class="navbar-item">
                         <div class="field is-grouped">
                             <p class="control">
                                 <a data-cold 
-                                    class="bd-tw-button button is-link"
+                                    class="bd-tw-button button is-dark"
                                     href="https://github.com/OlympusRobotics">
                                     <span class="icon">
                                         <i class="fab fa-github"></i>
@@ -130,9 +149,8 @@
     </section>
 
     <div class="container">
-        <section class="section" style="padding-top:15vh">
+        <section class="section p-6">
             <div>
-
                 <div class="columns is-multiline is-centered ">
                     <div class="column is-one-quarter center">
                         <h1 class="title is-2 center">Sponsorship Resources</h1>
@@ -382,7 +400,6 @@
 
     </footer>
 
-    <script type="text/javascript" src="/burger.js"></script>
 </body>
 
 </html>
