--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             background-color: yellow;
             z-index: 2;
         }
+        .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
     </style>
     <script type="module" src="index.js"></script>
     
@@ -80,8 +81,9 @@
                         <a class="navbar-item" href="sponsors.html">
                             Sponsorship
                         </a>
-
-
+                        <a class="navbar-item" href="join.html">
+                            Join Us!
+                        </a>
                     </div>
                     <div class="navbar-end">
                         <div class="navbar-item">
@@ -95,6 +97,22 @@
                                         </span>
                                         <span>
                                             Instagram
+                                        </span>
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="navbar-item">
+                            <div class="field is-grouped">
+                                <p class="control">
+                                    <a data-cold 
+                                        class="bd-tw-button button is-danger"
+                                        href="https://www.youtube.com/@olympusrobotics4982">
+                                        <span class="icon">
+                                            <i class="fab fa-youtube"></i>
+                                        </span>
+                                        <span>
+                                           Youtube 
                                         </span>
                                     </a>
                                 </p>
@@ -139,7 +157,7 @@
 
 
 
-    <section class="hero">
+    <section id="about" class="hero">
         <div class="hero-body has-text-centered" style="display:block;">
             <p class="title center_horizontal is-1">
                 WE ARE OLYMPUS ROBOTICS
@@ -177,6 +195,30 @@
         </div>
     </section>
 
+    <section id="youtube" class="hero is-dark">
+        <div class="hero-body has-text-centered" style="display: block;">
+            <div class="columns is-centered is-vcentered">
+                <!-- yt video -->
+                <div class="column is-two-thirds mx-2">
+                    <div class='embed-container'><iframe src='https://www.youtube.com/embed/icuKda1kI_k' frameborder='0' allowfullscreen></iframe></div>
+                </div>
+                <div class="column is-auto mx-2">
+                    <h1 class="title is-size-3">Check Out Our Youtube Channel!</h1>
+                    <a data-cold 
+                        class="bd-tw-button button is-large is-danger"
+                        href="https://www.youtube.com/@olympusrobotics4982">
+                        <span class="icon">
+                            <i class="fab fa-youtube"></i>
+                        </span>
+                        <span>
+                            Olympus Robotics         
+                        </span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="hero is-light">
         <div class="hero-body has-text-centered">
             <img src="https://www.firstinspires.org/sites/all/themes/first/assets/images/2020/first-horz-rgb.png"
@@ -185,7 +227,7 @@
                 We participate in the FIRST Robotics Competition, a yearly international high school robotics
                 competition which prepares students like us for the STEM field.
             </p>
-            <a href="https://www.firstinspires.org/robotics/frc">Learn More</a>
+            <a href="https://www.firstinspires.org/robotics/frc" class="button is-outlined is-large is-dark">Learn More</a>
 
 
         </div>
